tests/rosetta/transpiler/Zig/base64-decode-data.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/Zig/base64-decode-data.zig:130:39: error: expected type 'usize', found 'i64'
/workspace/mochi/tests/rosetta/transpiler/Zig/base64-decode-data.zig:130:39: note: unsigned 64-bit int cannot represent all possible signed 64-bit values
/workspace/mochi/tests/rosetta/transpiler/Zig/base64-decode-data.zig:161:39: error: expected type 'usize', found 'i64'
/workspace/mochi/tests/rosetta/transpiler/Zig/base64-decode-data.zig:161:39: note: unsigned 64-bit int cannot represent all possible signed 64-bit values
/workspace/mochi/tests/rosetta/transpiler/Zig/base64-decode-data.zig:27:442: error: expected type '[]const u8', found 'hash_map.HashMap([]const u8,i64,hash_map.StringContext,80)'
/workspace/mochi/zig-linux-x86_64-0.12.0/lib/std/hash_map.zig:366:12: note: struct declared here
